fixing text overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 main {
   display: flex;
   align-items: center;
@@ -9,14 +13,19 @@ main {
 
 #meme-text {
   position: absolute;
-  text-align: center;
+  width: 300px;
   text-shadow: 5px 5px 5px black;
   font-size: 30px;
   color: white;
+  word-wrap: break-word;
+  max-height: 300px;
+  padding: 0.4em;
 }
 
 #meme-image-container {
+  display: flex;
   margin-top: 5%;
+  text-align: center;
   flex-direction: column;
   border: 1px solid black;
   background-color: white;
